[gd_scene load_steps=19 format=3 uid="uid://cton2o3xsuut"]

[ext_resource type="Script" path="res://game/Player/Player.gd" id="1_cxmrw"]
[ext_resource type="Texture2D" uid="uid://drcbrlmbhg6ix" path="res://game/assets/player_all_sheet.png" id="2_m0ucx"]
[ext_resource type="Texture2D" uid="uid://ggx6d8p8ywd8" path="res://game/assets/slash.png" id="3_lerq4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06vji"]
size = Vector2(22, 50.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cujxf"]
radius = 18.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ovft8"]
radius = 22.0
height = 66.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wwo75"]
size = Vector2(22, 46)

[sub_resource type="Animation" id="Animation_m6p6c"]
resource_name = "dash"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_ffqni"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_x2c7l"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2y8f7"]
resource_name = "jump"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_nh7pt"]
resource_name = "swing"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 8, 9, 10, 11, 0]
}

[sub_resource type="Animation" id="Animation_ux5ji"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1l8e5"]
_data = {
"dash": SubResource("Animation_m6p6c"),
"fall": SubResource("Animation_ffqni"),
"idle": SubResource("Animation_x2c7l"),
"jump": SubResource("Animation_2y8f7"),
"swing": SubResource("Animation_nh7pt"),
"walk": SubResource("Animation_ux5ji")
}

[sub_resource type="Animation" id="Animation_b4opb"]
resource_name = "slash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlashSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlashSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ynpoe"]
_data = {
"slash": SubResource("Animation_b4opb")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tn25h"]
bg_color = Color(1, 0.32549, 0.388235, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_so3f3"]
bg_color = Color(0, 0.72549, 0.219608, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="Player" type="CharacterBody2D"]
collision_layer = 5
script = ExtResource("1_cxmrw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, -4)
scale = Vector2(2, 2)
texture = ExtResource("2_m0ucx")
hframes = 25
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 13)
shape = SubResource("RectangleShape2D_06vji")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(11, 6)
zoom = Vector2(1.8, 1.8)
editor_draw_limits = true
metadata/_edit_lock_ = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(11, 8)
shape = SubResource("CapsuleShape2D_cujxf")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DashAgainTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CoyoteJump" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShootArea" type="Node2D" parent="."]
visible = false
position = Vector2(-1, -2)
metadata/_edit_lock_ = true

[node name="Shoot" type="Marker2D" parent="ShootArea"]
position = Vector2(32, -2)

[node name="InteractionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(1, 11)
shape = SubResource("CapsuleShape2D_ovft8")

[node name="KillZone" type="Area2D" parent="."]
visible = false
collision_mask = 8
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(1, 13)
shape = SubResource("RectangleShape2D_wwo75")

[node name="MovementPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1l8e5")
}

[node name="AttackPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ynpoe")
}

[node name="SlashSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(22, 0)
rotation = -1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_lerq4")
hframes = 4
frame = 1

[node name="DamageCD" type="Timer" parent="."]
wait_time = 1.5

[node name="ShootCD" type="Timer" parent="."]
wait_time = 0.4

[node name="SlashCD" type="Timer" parent="."]
wait_time = 0.7

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -15.0
offset_top = -29.0
offset_right = 15.0
offset_bottom = -24.0
theme_override_styles/background = SubResource("StyleBoxFlat_tn25h")
theme_override_styles/fill = SubResource("StyleBoxFlat_so3f3")
max_value = 15.0
step = 1.0
value = 15.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Death" type="Label" parent="."]
visible = false
offset_left = -32.0
offset_top = -54.0
offset_right = 37.0
offset_bottom = -31.0
text = "You Died"
vertical_alignment = 1

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashAgainTimer" to="." method="_on_dash_again_timer_timeout"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="body_shape_entered" from="KillZone" to="." method="_on_kill_zone_body_shape_entered"]
[connection signal="timeout" from="DamageCD" to="." method="_on_damage_cd_timeout"]
[connection signal="timeout" from="ShootCD" to="." method="_on_shoot_cd_timeout"]
[connection signal="timeout" from="SlashCD" to="." method="_on_slash_cd_timeout"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
